# Mp3Downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  config.py  constants.py  main.py  utils.py
src/data/: mp3.py  state.py
src/logic/: downloads.py  playlist.py  progress_bar.py  update_tags.py
